# DII_STT

./: CMakeLists.txt  README.md  benchmark.sh  log.txt  makefile
archived/: makefile
archived/src/: GCTL-dataType.cpp  GCTL-dataType.h  GCTL-fileFunc.cpp  GCTL-forward3DG.cpp  GCTL-mathFunc.h  GCTL-progressBar.cpp  cgdy.h
data/benchmark/: invertTopography_grad.msh  invertTopography_grav.msh  invertedGrad-diff.eps  invertedGrad-statistic.txt  invertedGrav.nc  modelBase_grad_reg.txt  modelObs_grad_reg.nc  modelObs_grav.txt  modelObs_grav_reg.eps  modelObs_grav_reg.txt  rho.eps  rho.nc  topo.xyz
data/benchmark2/: d4-template.msh  gradient.msh  invertTopography_grad.msh  model-benchmark2.msh  modelBase_grav.txt  modelObs_grad.txt  modelObs_grav.txt  tmp.TH8
data/moonMoho-d5/: moon-model-d5.msh
doc/benchmark/: calDiff.py  invertedGrad-diff.nc  invertedGrad.eps  invertedGrad.nc  invertedGrav-diff.eps  invertedGrav-diff.nc  invertedGrav-statistic.txt  invertedGrav.eps  model-benchmark.msh  modelBase_grad.txt  modelBase_grav.txt  modelBase_grav_reg.txt  modelObs_grad.txt  modelObs_grad_reg.eps  modelObs_grad_reg.txt  modelObs_grav_reg.nc  rho.xyz  tmp.sBf  tmp.uK5  topo.eps  topo.nc
doc/benchmark2/: invertTopography_grav.msh  modelBase_grad.txt  refindex.py  reformat.sh  tmp.ZTr  tmp.out
doc/moonMoho-d5/: MoonMantleObs-d6.txt
src/: CMakeLists.txt  GCTL-fileFunc.h  GCTL-forward3DG.h  GCTL-mathFunc.cpp  GCTL-progressBar.h  GCTL-sysDefine.h  dii_stt.h  init_ref_system.cpp  main.cpp  read_msh_file.cpp  struct.h
